--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "encore/laravel-admin": ">=1.7",
+        "dcat/laravel-admin": ">=2.1",
         "guzzlehttp/guzzle": ">=6.0",
         "overtrue/wechat": "^4.0"
     },
